[package]
name = "heroku-cli-buildkits"
version = "0.1.0"
authors = ["Terence Lee <hone02@gmail.com>"]

[lib]
name = "heroku_cli_buildkits"
crate-type = ["dylib"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
netrc = "0.4.1"
neon = "0.1.19"
reqwest = "0.7"

[build-dependencies]
neon-build = "0.1.19"

[dev-dependencies]
tempdir = "0.3"

[replace]
"neon:0.1.19" = { git = "https://github.com/neon-bindings/neon" }
"neon-build:0.1.19" = { git = "https://github.com/neon-bindings/neon" }
